--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html>
 
   {% include head.html %}
+  {% include google_analytics.html %}
 
     <body>
 
@@ -10,7 +11,8 @@
     <div class="page-content">
       <div class="wrap">
       {{ content }}
-      </div>
+       {% include comments.html %}
+     </div>
     </div>
 
     {% include footer.html %}
