--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,7 +3,7 @@
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'blogmothurorg'; // required: replace example with your forum shortname
 		var disqus_identifier = '{{ page.url }}';
-		var disqus_url = 'http://erjjones.github.com{{ page.url }}';
+		var disqus_url = 'http://blog.mothur.org{{ page.url }}';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
