--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,7 @@
+@import "bootstrap";
+
+
+
 /* Base */
 /* ----------------------------------------------------------*/
 
@@ -407,4 +411,10 @@ a:visited { color: #205caa; }
     width: auto;
     margin: 0 0 15px; }
 
+}
+
+
+.post-content p {
+	padding: 5px 0;
+	margin: 0;
 }
