--- a/css/main.css
+++ b/css/main.css
@@ -418,3 +418,11 @@ a:visited { color: #205caa; }
 	padding: 5px 0;
 	margin: 0;
 }
+
+.tldr {
+	background-color: #ccf;
+	border-radius: 20px;
+	font-size: 18px;
+	margin: 15px;
+	padding: 20px;
+}
